New APIs and tests
