# docs/swagger.json
@@ -19,7 +19,7 @@
     "basePath": "/api/v1",
     "paths": {
         "/buy": {
-            "put": {
+            "post": {
                 "security": [
                     {
                         "ApiKeyAuth": []
@@ -55,7 +55,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.BuyResult"
+                            "$ref": "#/definitions/model.BuyResponse"
                         }
                     },
                     "400": {
@@ -80,7 +80,7 @@
             }
         },
         "/deposit": {
-            "put": {
+            "post": {
                 "security": [
                     {
                         "ApiKeyAuth": []
@@ -116,7 +116,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.DepositResult"
+                            "$ref": "#/definitions/model.DepositResponse"
                         }
                     },
                     "400": {
@@ -407,7 +407,7 @@
             }
         },
         "/reset": {
-            "put": {
+            "post": {
                 "security": [
                     {
                         "ApiKeyAuth": []
@@ -428,7 +428,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.BuyResult"
+                            "$ref": "#/definitions/model.BuyResponse"
                         }
                     },
                     "400": {
@@ -584,7 +584,7 @@
             }
         },
         "/user/login": {
-            "put": {
+            "post": {
                 "description": "Logs user in",
                 "consumes": [
                     "application/json"
@@ -598,18 +598,13 @@
                 "summary": "Login",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "UserName",
-                        "name": "userName",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Password",
-                        "name": "password",
-                        "in": "query",
-                        "required": true
+                        "description": "Login Request",
+                        "name": "credentials",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.LoginRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -647,7 +642,7 @@
             }
         },
         "/user/logout": {
-            "put": {
+            "post": {
                 "security": [
                     {
                         "ApiKeyAuth": []
@@ -693,7 +688,7 @@
             }
         },
         "/user/logout/all": {
-            "put": {
+            "post": {
                 "description": "Logs current user ouy of all sessions",
                 "consumes": [
                     "application/json"
@@ -707,18 +702,13 @@
                 "summary": "Log out all user's sessions",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "UserName",
-                        "name": "userName",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Password",
-                        "name": "password",
-                        "in": "query",
-                        "required": true
+                        "description": "Login Request",
+                        "name": "credentials",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.LoginRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -886,7 +876,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.User"
+                            "$ref": "#/definitions/model.UpdateUserRequest"
                         }
                     }
                 ],
@@ -965,7 +955,7 @@
                 }
             }
         },
-        "model.BuyResult": {
+        "model.BuyResponse": {
             "type": "object",
             "properties": {
                 "change": {
@@ -993,12 +983,23 @@
                 }
             }
         },
-        "model.DepositResult": {
+        "model.DepositResponse": {
             "type": "object",
             "properties": {
                 "deposit": {
                     "type": "integer",
                     "example": 5
+                }
+            }
+        },
+        "model.LoginRequest": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "userName": {
+                    "type": "string"
                 }
             }
         },
@@ -1097,43 +1098,6 @@
         },
         "BasicAuth": {
             "type": "basic"
-        },
-        "OAuth2AccessCode": {
-            "type": "oauth2",
-            "flow": "accessCode",
-            "authorizationUrl": "https://example.com/oauth/authorize",
-            "tokenUrl": "https://example.com/oauth/token",
-            "scopes": {
-                "admin": "                            Grants read and write access to administrative information"
-            }
-        },
-        "OAuth2Application": {
-            "type": "oauth2",
-            "flow": "application",
-            "tokenUrl": "https://example.com/oauth/token",
-            "scopes": {
-                "admin": "                             Grants read and write access to administrative information",
-                "write": "                             Grants write access"
-            }
-        },
-        "OAuth2Implicit": {
-            "type": "oauth2",
-            "flow": "implicit",
-            "authorizationUrl": "https://example.com/oauth/authorize",
-            "scopes": {
-                "admin": "                          Grants read and write access to administrative information",
-                "write": "                          Grants write access"
-            }
-        },
-        "OAuth2Password": {
-            "type": "oauth2",
-            "flow": "password",
-            "tokenUrl": "https://example.com/oauth/token",
-            "scopes": {
-                "admin": "                          Grants read and write access to administrative information",
-                "read": "                           Grants read access",
-                "write": "                          Grants write access"
-            }
         }
     }
 }
