# model/buyResponse.go
@@ -1,6 +1,6 @@
 package model
 
-type BuyResult struct {
+type BuyResponse struct {
 	ProductName string  `json:"productName" example:"product_name"`
 	Change      []*Coin `json:"change"`
 	Total       int     `json:"total" example:"5"`
